@@ -46,6 +46,7 @@
 
 #include <string>
 
+#include "eixTk/diagnostics.h"
 #include "eixTk/dialect.h"
 #include "eixTk/likely.h"
 #include "eixTk/null.h"
@@ -135,7 +136,9 @@ const char *date_conv(const char *dateFormat, std::time_t mydate) {
 	string old_lcall = setlocale(LC_ALL, NULLPTR);
 	setlocale(LC_ALL, "");
 	struct tm *loctime(localtime (&mydate));
+GCC_DIAG_OFF(format-nonliteral)
 	strftime(buffer, max_datelen, dateFormat, loctime);
+GCC_DIAG_ON(format-nonliteral)
 	setlocale(LC_ALL, old_lcall.c_str());
 	return buffer;
 }
